# SlidingPuzzle

./: CMakeLists.txt  README.md
examples/: 15puzzle_1.txt  24puzzle_1.txt  35puzzle_1.txt  8puzzle_1.txt  8puzzle_2.txt
src/: heuristic.cc  interface.cc  interface.h  main.cc  puzzle.cc  puzzle.h  state.cc  state.h
tests/: test_example.cc  test_heuristic.cc  test_interface.cc  test_puzzle.cc  test_state.cc
